create list of result

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,6 +5,7 @@
     name="songTitle"
     class="search__input"
   />
+  <button>Search</button>
 </form>
 
-<app-search-song></app-search-song>
+<app-songs-list [songs]="songs"></app-songs-list>
