--- a/src/app/search/songs-list/songs-list.component.html
+++ b/src/app/search/songs-list/songs-list.component.html
@@ -1,13 +1,14 @@
-<h2 *ngIf="songs">List songs</h2>
-
-<ul class="songs-list">
-  <li *ngFor="let song of songs">
-    <a
-      href="http://www.songsterr.com/a/wa/song?id={{ song.id }}"
-      target="_blank"
-    >
-      <span>{{ song.title }} - {{ song.artist.name }}</span>
-      <span class="chords" *ngIf="song.chordsPresent"> [chords]</span>
-    </a>
-  </li>
-</ul>
+<div class="songs-list && song-list.length>0) " *ngIf="songs">
+  <div *ngIf="error" class="error">{{ error }}</div>
+  <ul>
+    <li class="songs-list__item" *ngFor="let song of songs">
+      <a
+        href="http://www.songsterr.com/a/wa/song?id={{ song.id }}"
+        target="_blank"
+      >
+        <span>{{ song.title }} - {{ song.artist }}</span>
+        <span class="chords" *ngIf="song.chordsPresent">chords</span>
+      </a>
+    </li>
+  </ul>
+</div>
