--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,13 @@
 ul {
   list-style: none;
 }
+
+.error {
+  color: rgb(148, 0, 0);
+  margin-top: 5vh;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-align: center;
+  font-weight: bold;
+}
