add style, add routing. little changes in nav

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<nav>
+  <ul class="nav">
+    <li class="nav__item">
+      <a class="nav__link" routerLink="/search-songs"><div>Songs</div></a>
+    </li>
+    <li class="nav__item">
+      <a class="nav__link" routerLink="/search-chords"> <div>Chords</div></a>
+    </li>
+  </ul>
+</nav>
