--- a/src/app/shared-module/nav/nav.component.html
+++ b/src/app/shared-module/nav/nav.component.html
@@ -5,16 +5,18 @@
         class="nav__link"
         [routerLinkActive]="'active'"
         routerLink="/search-songs"
-        >Songs</a
       >
+        <div>Songs</div>
+      </a>
     </li>
     <li class="nav__item">
       <a
         class="nav__link"
         [routerLinkActive]="'active'"
         routerLink="/search-chords"
-        >Chords</a
       >
+        <div>Chords</div>
+      </a>
     </li>
   </ul>
 </nav>
